K8s/service-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-a-ingress
spec:
  rules:
    - host: "service-a.192.168.49.2.nip.io"

      http:
        paths:
          - path: /submit
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
